--- a/Research_on_water_status.tex
+++ b/Research_on_water_status.tex
@@ -1,6 +1,8 @@
 \documentclass[preprint]{elsarticle}
 \usepackage{subfiles}
 \usepackage{lineno,hyperref}
+\usepackage{subfigure}
+\usepackage{graphicx}
 % \modulolinenumbers5
 
 \journal{TBD}
