--- a/Research_on_water_status.tex
+++ b/Research_on_water_status.tex
@@ -35,10 +35,10 @@
     PEMFC \sep water content \sep water balance\sep high power fuel cell system
 \end{keyword}
 \maketitle
-\subfile{Chapter1_Introduction.tex}
-\subfile{Chapter2_Experiment.tex}
-\subfile{Chapter3_Results.tex}
-\subfile{Chapter4_Conclusion.tex}
+\subfile{Research_on_water_status_Chapters/Chapter1_Introduction.tex}
+\subfile{Research_on_water_status_Chapters/Chapter2_Experiment.tex}
+\subfile{Research_on_water_status_Chapters/Chapter3_Results.tex}
+\subfile{Research_on_water_status_Chapters/Chapter4_Conclusion.tex}
 \bibliographystyle{elsarticle-num}
-\bibliography{ref.bib}
+\bibliography{Research_on_water_status_Chapters/ref.bib}
 \end{document}
